@@ -29,7 +29,7 @@ require_once ($config["homedir"] . '/include/functions_graph.php');
 
 $period = get_parameter ( "period", 3600);
 $draw_alerts = get_parameter("draw_alerts", 0);
-$avg_only = get_parameter ("avg_only", 0);
+$avg_only = get_parameter ("avg_only", 1);
 $period = get_parameter ("period", 3600);
 $width = get_parameter ("width", 555);
 $height = get_parameter ("height", 245);
